--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+Sistema de seguimiento de incidentes
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Si se desea obtener el codigo fuente de la aplicación y poderlo ejecutarlo en local se deben seguir los siguentes pasos:
+1. git clone git://github.com/M4riacg/Thoughtrack.git
+2. bundle install && rake db:migrate
+3. Si se desea cambiar los usuarios iniciales y/o prioridades etc, se debe acceder al fichero seeds.rb y editarlo.
+Seeds.rb es una manera convencional para añadir datos de semillas para su aplicación.
+4. rake db:seed
+5. rails s
