--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-Sistema de seguimiento de incidentes
+<b>Sistema de seguimiento de incidentes</b>
 
 Si se desea obtener el codigo fuente de la aplicación y poderlo ejecutarlo en local se deben seguir los siguentes pasos:
 1. git clone git://github.com/M4riacg/Thoughtrack.git
